--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
         <title>User Application</title>
     </head>
     <body>
-        <div id="app"></div>
 
         <!-- plugin initialization -->
         <script>
             document.addEventListener('DOMContentLoaded', function(){
                 // create instance of a plugin
-               var instance = new BrowsePage();
+               var instance = new App();
             });
         </script>
     </body>
