--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>User Application</title>
+        <title>Netflix UIE</title>
     </head>
     <body>
-
         <!-- plugin initialization -->
         <script>
             document.addEventListener('DOMContentLoaded', function(){
